--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue": "^3.3.4"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.9"
     }
 }
